include/xprb.h

/**************************** Function prototypes ****************************/
/**** Initialization/termination ****/
int XB_CC xbslinit(void);
int XB_CC xbslfinish(void);
const char * XB_CC xbgetversion(void);
int XB_CC xbgettime(void);
/**** Error handling ****/
int XB_CC xbseterrctrl(int flag);
int XB_CC xbdefcberr_prob(struct Xbprob *prob,void (XB_CC *usererror)(struct Xbprob *,void *,int, int, const char *),void *vp);
/**** Problem definition ****/
struct Xbprob * XB_CC xbnewprob(const char *name);
int XB_CC xbchgprob(struct Xbprob *prob);
struct xo_prob_struct * XB_CC xbgetsprob_prob(struct Xbprob *prob);
struct Xbprob * XB_CC xbgetprob(void);
/**** Output and printing ****/
int XB_CC xbdefcbmsg_prob(struct Xbprob *prob,void (XB_CC *userprint)(struct Xbprob *,void *,const char *),void *vp);
int XB_CC xbsetmsglevel_prob(struct Xbprob *prob, int level);  /* default: 2 */
int XB_CC xbsetrealfmt_prob(struct Xbprob *prob,const char *realfmt); /* default: "%g" */
/**** Problem definition ****/
int XB_CC xbdelprob_prob(struct Xbprob *prob);
int XB_CC xbresetprob_prob(struct Xbprob *prob);
int XB_CC xbsetprobname_prob(struct Xbprob *prob, const char *name);
/**** Variable definition ****/
struct Xbvar * XB_CC xbnewvar_prob(struct Xbprob *prob, int type, const char *name, double lob, double upb);
int XB_CC xbsetvartype(struct Xbvar *var, int type);
/**** Constraint definition ****/
struct Xbctr * XB_CC xbnewctr_prob(struct Xbprob *prob, const char *name, int qrtype);
   
int XB_CC xbdelctr(struct Xbctr *lct);
int XB_CC xbaddterm(struct Xbctr *lct, struct Xbvar *var, double coeff);
int XB_CC xbdelterm(struct Xbctr *lct, struct Xbvar *var);
int XB_CC xbsetterm(struct Xbctr *lct, struct Xbvar *var, double coeff);
int XB_CC xbaddqterm(struct Xbctr *lct, struct Xbvar *var1, struct Xbvar *var2, double coeff);
int XB_CC xbsetqterm(struct Xbctr *lct, struct Xbvar *var1, struct Xbvar *var2,double coeff);
struct Xbctr * XB_CC xbnewprec_prob(struct Xbprob *prob,const char *name, struct Xbvar *v1, double dur,struct Xbvar *v2);
int XB_CC xbsetctrtype(struct Xbctr *lct, int qrtype);
int XB_CC xbsetrange(struct Xbctr *lct, double low, double up);
int XB_CC xbsetmodcut(struct Xbctr *lct, int mcstat);
/**** SOS definition ****/
struct Xbsos * XB_CC xbnewsos_prob(struct Xbprob *prob, const char *name, int type);
int XB_CC xbdelsos(struct Xbsos *sos);
int XB_CC xbaddsosel(struct Xbsos *sos, struct Xbvar *var, double ref);
int XB_CC xbdelsosel(struct Xbsos *sos, struct Xbvar *var);
/**** Objective function ****/
int XB_CC xbsetsense_prob(struct Xbprob *prob, int dir);   /* default: minimise */
int XB_CC xbgetsense_prob(struct Xbprob *prob);
 
int XB_CC xbsetobj_prob(struct Xbprob *prob, struct Xbctr *lct);
/**** Variable bounds ****/
int XB_CC xbsetub(struct Xbvar *var, double c);
int XB_CC xbsetlb(struct Xbvar *var, double c);
int XB_CC xbfixvar(struct Xbvar *var, double c);
int XB_CC xbsetlim(struct Xbvar *var, double c);
/**** Names ****/
void * XB_CC xbgetbyname_prob(struct Xbprob *prob, const char *name, int type);
int XB_CC xbsetdictsize_prob(struct Xbprob *prob,int dico,int size);
/**** Directives ****/
int XB_CC xbsetvardir(struct Xbvar *var, int type, double cost);
int XB_CC xbsetsosdir(struct Xbsos *ls, int type, double val);
int XB_CC xbcleardir_prob(struct Xbprob *prob);
 

/**** Index sets ****/
struct Xbidxset * XB_CC xbnewidxset_prob(struct Xbprob *prob, const char *name, int maxsize);
int XB_CC xbaddidxel(struct Xbidxset *idx, const char *name);
int XB_CC xbgetidxel(struct Xbidxset *idx, const char *name);
const char * XB_CC xbgetidxelname(struct Xbidxset *idx, int i);
     
const char * XB_CC xbgetidxsetname(struct Xbidxset *idx);
int XB_CC xbgetidxsetsize(struct Xbidxset *idx);
/**** Information on variables and constraints ****/
const char * XB_CC xbgetprobname_prob(struct Xbprob *prob);
const char * XB_CC xbgetvarname(struct Xbvar *var);
const char * XB_CC xbgetctrname(struct Xbctr *lct);
const char * XB_CC xbgetsosname(struct Xbsos *sos);
int XB_CC xbsetcolorder_prob(struct Xbprob *prob,int colorder);
int XB_CC xbfixglobals_prob(struct Xbprob *prob, int ifround);
int XB_CC xbaddexpr_term(struct Xbexpr *,struct Xbvar *,struct Xbvar *, double);
int XB_CC xbsetexpr_term(struct Xbexpr *,struct Xbvar *,struct Xbvar *, double);
#define xbdefcberr(fct,p) xbdefcberr_prob(xbgetprob(),fct,p)
#define xbdefcbmsg(fct,p) xbdefcbmsg_prob(xbgetprob(),fct,p)
#define XPRB_INFINITY XB_INFINITY
#define XPRB_VERSION XB_VERSION
#define XPRB_ERR XB_ERR
#define XPRB_WAR XB_WAR
#define XPRB_PL XB_PL
#define XPRB_BV XB_BV
#define XPRB_UI XB_UI
#define XPRB_PI XB_PI
#define XPRB_SC XB_SC
#define XPRB_SI XB_SI
#define XPRB_N XB_N
#define XPRB_L XB_L
#define XPRB_G XB_G
#define XPRB_E XB_E
#define XPRB_R XB_R
#define XPRB_MAXIM XB_MAXIM
#define XPRB_MINIM XB_MINIM
#define XPRB_S1 XB_S1
#define XPRB_S2 XB_S2
#define XPRB_UPACT XB_UPACT 
#define XPRB_LOACT XB_LOACT 
#define XPRB_UUP   XB_UUP   
#define XPRB_UDN   XB_UDN   
#define XPRB_UCOST XB_UCOST 
#define XPRB_LCOST XB_LCOST 
#define XPRB_PR XB_PR
#define XPRB_UP XB_UP
#define XPRB_DN XB_DN
#define XPRB_PU XB_PU
#define XPRB_PD XB_PD
#define XPRB_VAR XB_VAR
#define XPRB_ARR XB_ARR
#define XPRB_CTR XB_CTR
#define XPRB_SOS XB_SOS
#define XPRB_IDX XB_IDX
#define XPRB_DICT_NAMES XB_DICT_NAMES
#define XPRB_DICT_IDX   XB_DICT_IDX
#define XPRB_LP  XB_LP
#define XPRB_MPS XB_MPS
#define XPRB_XPRS_SOL    XB_XO_SOL
#define XPRB_XPRS_PROB   XB_XO_PROB
#define XPRB_XPRS_SOLMIP XB_XO_SOLMIP
#define XPRB_GEN XB_GEN
#define XPRB_DIR XB_DIR
#define XPRB_MOD XB_MOD
#define XPRB_SOL XB_SOL
#define XPRB_LP_OPTIMAL XB_LP_OPTIMAL
#define XPRB_LP_INFEAS XB_LP_INFEAS
#define XPRB_LP_CUTOFF XB_LP_CUTOFF
#define XPRB_LP_UNFINISHED XB_LP_UNFINISHED
#define XPRB_LP_UNBOUNDED XB_LP_UNBOUNDED
#define XPRB_LP_CUTOFF_IN_DUAL XB_LP_CUTOFF_IN_DUAL
#define XPRB_LP_UNSOLVED XB_LP_UNSOLVED
#define XPRB_LP_NONCONVEX XB_LP_NONCONVEX
#define XPRB_MIP_NOT_LOADED XB_MIP_NOT_LOADED
#define XPRB_MIP_LP_NOT_OPTIMAL XB_MIP_LP_NOT_OPTIMAL
#define XPRB_MIP_LP_OPTIMAL XB_MIP_LP_OPTIMAL
#define XPRB_MIP_NO_SOL_FOUND XB_MIP_NO_SOL_FOUND
#define XPRB_MIP_SOLUTION XB_MIP_SOLUTION
#define XPRB_MIP_INFEAS XB_MIP_INFEAS
#define XPRB_MIP_OPTIMAL XB_MIP_OPTIMAL
#define XPRB_MIP_UNBOUNDED XB_MIP_UNBOUNDED
#define XPRBgettime xbgettime
/**** Error handling ****/
#define XPRBseterrctrl xbseterrctrl
#define XPRBchgprob xbchgprob
#define XPRBgetprob xbgetprob
#define XPRBsetvartype xbsetvartype
#define XPRBdelctr xbdelctr
#define XPRBdelterm xbdelterm
#define XPRBsetterm xbsetterm
#define XPRBnewprec xbnewprec_prob
#define XPRBsetctrtype xbsetctrtype
#define XPRBsetrange xbsetrange
#define XPRBsetmodcut xbsetmodcut
#define XPRBdelsos xbdelsos
#define XPRBaddsosel xbaddsosel
#define XPRBdelsosel xbdelsosel
/**** Variable bounds ****/
#define XPRBsetub xbsetub
#define XPRBsetlb xbsetlb
#define XPRBfixvar xbfixvar
#define XPRBsetlim xbsetlim
#define XPRBgetidxsetsize xbgetidxsetsize