include/xprb.bas

Attribute VB_Name = "XPRB"
' BCL :  Xpress Builder Component Library
' File xprb.bas
' Visual Basic Module
' (c) Copyright Fair Isaac Corporation 2002-2014 All rights reserved.

Option Explicit
Option Base 0
Option Compare Text

#If (VBA7 <> 0) And (Win64 <> 0) Then
Global Const XPRB_NULL As LongPtr = 0
Global Const XPRB_PTR_VARTYPE = vbLongLong
#Else
Global Const XPRB_NULL As Long = 0
Global Const XPRB_PTR_VARTYPE = vbLong
#End If

Global Const XPRB_INFINITY = 1E+20

' BCL version
Global Const XPRB_VERSION = "4.8.4"

' Error types
Global Const XPRB_ERR = 1
Global Const XPRB_WAR = 0

' Variable types
Global Const XPRB_PL = 0
Global Const XPRB_BV = 1
Global Const XPRB_UI = 2
Global Const XPRB_PI = 3
Global Const XPRB_SC = 4
Global Const XPRB_SI = 5

' Constraint types
Global Const XPRB_N = 0
Global Const XPRB_L = 1
Global Const XPRB_G = 2
Global Const XPRB_E = 3
Global Const XPRB_R = 4

' Sense of the objective function
Global Const XPRB_MAXIM = 1
Global Const XPRB_MINIM = 0

' SOS types
Global Const XPRB_S1 = 0
Global Const XPRB_S2 = 1

' Directive types
Global Const XPRB_PR = 1
Global Const XPRB_UP = 2
Global Const XPRB_DN = 3
Global Const XPRB_PU = 4
Global Const XPRB_PD = 5

' Range types
Global Const XPRB_UPACT = 0
Global Const XPRB_LOACT = 1
Global Const XPRB_UUP = 2
Global Const XPRB_UDN = 3
Global Const XPRB_UCOST = 4
Global Const XPRB_LCOST = 5

' Dictionary types
Global Const XPRB_VAR = 1
Global Const XPRB_ARR = 2
Global Const XPRB_CTR = 3
Global Const XPRB_SOS = 4
Global Const XPRB_IDX = 5

' Dictionaries
Global Const XPRB_DICT_NAMES = 0
Global Const XPRB_DICT_IDX = 1

' File formats
Global Const XPRB_LP = 1
Global Const XPRB_MPS = 2

' Synchronization
Global Const XPRB_XPRS_SOL = 1
Global Const XPRB_XPRS_PROB = 2
Global Const XPRB_XPRS_SOLMIP = 3

' BCL problem status
Global Const XPRB_GEN = 1       ' Matrix has been generated
Global Const XPRB_DIR = 2       ' Directive added
Global Const XPRB_MOD = 4       ' Row/Col modification
Global Const XPRB_SOL = 8       ' Solution available

' LP status
Global Const XPRB_LP_OPTIMAL = 1
Global Const XPRB_LP_INFEAS = 2
Global Const XPRB_LP_CUTOFF = 3
Global Const XPRB_LP_UNFINISHED = 4
Global Const XPRB_LP_UNBOUNDED = 5
Global Const XPRB_LP_CUTOFF_IN_DUAL = 6
Global Const XPRB_LP_UNSOLVED = 7
Global Const XPRB_LP_NONCONVEX = 8

' MIP status
Global Const XPRB_MIP_NOT_LOADED = 0
Global Const XPRB_MIP_LP_NOT_OPTIMAL = 1
Global Const XPRB_MIP_LP_OPTIMAL = 2
Global Const XPRB_MIP_NO_SOL_FOUND = 3
Global Const XPRB_MIP_SOLUTION = 4
Global Const XPRB_MIP_INFEAS = 5
Global Const XPRB_MIP_OPTIMAL = 6
Global Const XPRB_MIP_UNBOUNDED = 7

' To set constant term in constraints
Global Const XPRB_RHS = 0

' Stream codes for SetStream
Global Const XPRBIO_IN = 0
Global Const XPRBIO_OUT = 1
Global Const XPRBIO_ERR = 2

Private Enum CB_Contexts
 CBCON_MSG = 0
 CBCON_err
 '...
 CBCON_COUNT
End Enum

Private cbcontexts(0 To CBCON_COUNT - 1) As New Collection
Private initCount As Long

#If (VBA7 <> 0) And (Win64 <> 0) Then

'*** Redirection of IO ***
Declare PtrSafe Function XPRBsetStream Lib "xprvb" Alias "xvbsetstream" (ByVal what As Long, ByVal fname As String) As Long
Private Declare PtrSafe Function xvboutput Lib "xprvb" (ByVal what As Long, ByVal text As String) As Long
Declare PtrSafe Function XPRBflush Lib "xprvb" Alias "xvbflush" (ByVal what As Long) As Long
Declare PtrSafe Function XPRBclose Lib "xprvb" Alias "xvbclose" (ByVal what As Long) As Long

'*** Init/Finish ***
Private Declare PtrSafe Function xbslinit Lib "xprb" () As Long
Private Declare PtrSafe Function xbgetversion Lib "xprb" () As LongPtr
Private Declare PtrSafe Function xbslfinish Lib "xprb" () As Long
Declare PtrSafe Function XPRBgettime Lib "xprb" Alias "xbgettime" () As Long

'*** Error handling ***
Declare PtrSafe Function XPRBseterrctrl Lib "xprb" Alias "xbseterrctrl" (ByVal flag As Long) As Long
Private Declare PtrSafe Function xbdefcberr Lib "xprb" Alias "xbdefcberr_prob" (ByVal prob As LongPtr, ByVal Address As LongPtr, ByVal vp As LongPtr) As Long
Private Declare PtrSafe Sub xvbcallcberr Lib "xprvb" (ByVal fn As LongPtr, ByRef prob As Variant, ByRef context As Variant, ByRef errnum As Variant, ByRef errtype As Variant, ByRef msg As Variant)
Private Declare PtrSafe Function xvbgeterrlvltext Lib "xprvb" (ByVal lvl As Long, ByVal folder As String) As LongPtr

'*** Problem definition ***
Private Declare PtrSafe Function xbnewprob Lib "xprb" (ByVal nam As String) As LongPtr
Declare PtrSafe Function XPRBgetprob Lib "xprb" Alias "xbgetprob" () As LongPtr
Declare PtrSafe Function XPRBchgprob Lib "xprb" Alias "xbchgprob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbdelprob Lib "xprb" Alias "xbdelprob_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbresetprob Lib "xprb" Alias "xbresetprob_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbgetXPRSprob Lib "xprb" Alias "xbgetsprob_prob" (ByVal prob As LongPtr) As LongPtr
Private Declare PtrSafe Function xbsetprobname Lib "xprb" Alias "xbsetprobname_prob" (ByVal prob As LongPtr, ByVal name As String) As Long

'*** Output and printing ***
Private Declare PtrSafe Function xbdefcbmsg Lib "xprb" Alias "xbdefcbmsg_prob" (ByVal prob As LongPtr, ByVal fn As LongPtr, ByVal context As LongPtr) As Long
Private Declare PtrSafe Sub xvbcallcbmsg Lib "xprvb" (ByVal fn As LongPtr, ByRef prob As Variant, ByRef context As Variant, ByRef msg As Variant)
Private Declare PtrSafe Function xbsetmsglevel Lib "xprb" Alias "xbsetmsglevel_prob" (ByVal prob As LongPtr, ByVal level As Long) As Long   ' default: 2
Private Declare PtrSafe Function xbsetrealfmt Lib "xprb" Alias "xbsetrealfmt_prob" (ByVal prob As LongPtr, ByVal fmt As String) As Long
Private Declare PtrSafe Function xbsetcolorder Lib "xprb" Alias "xbsetcolorder_prob" (ByVal prob As LongPtr, ByVal num As Long) As Long   ' default: 0
Private Declare PtrSafe Function xbfixglobals Lib "xprb" Alias "xbfixglobals_prob" (ByVal prob As LongPtr, ByVal ifFound As Long) As Long

'*** Variable definition ***
Private Declare PtrSafe Function xbnewvar Lib "xprb" Alias "xbnewvar_prob" (ByVal prob As LongPtr, ByVal typ As Long, ByVal nam As String, ByVal lob As Double, ByVal upb As Double) As LongPtr
Declare PtrSafe Function XPRBsetvartype Lib "xprb" Alias "xbsetvartype" (ByVal v As LongPtr, ByVal typ As Long) As Long

'*** Constraint definition ***
Private Declare PtrSafe Function xbnewctr Lib "xprb" Alias "xbnewctr_prob" (ByVal prob As LongPtr, ByVal nam As String, ByVal qrtype As Long) As LongPtr
Declare PtrSafe Function XPRBdelctr Lib "xprb" Alias "xbdelctr" (ByVal lct As Long) As Long
Private Declare PtrSafe Function xbaddexpr_term Lib "xprb" (ByVal lct As LongPtr, ByVal v As LongPtr, ByVal v2 As LongPtr, ByVal coeff As Double) As Long
Declare PtrSafe Function XPRBdelterm Lib "xprb" Alias "xbdelterm" (ByVal lct As LongPtr, ByVal v As LongPtr) As Long
Declare PtrSafe Function XPRBsetterm Lib "xprb" Alias "xbsetterm" (ByVal lct As LongPtr, ByVal v As LongPtr, ByVal coeff As Double) As Long
Declare PtrSafe Function XPRBnewprec Lib "xprb" Alias "xbnewprec_prob" (ByVal prob As LongPtr, ByVal nam As String, ByVal v1 As LongPtr, ByVal coeff As Double, ByVal v2 As LongPtr) As LongPtr
Declare PtrSafe Function XPRBsetctrtype Lib "xprb" Alias "xbsetctrtype" (ByVal lct As LongPtr, ByVal qrtype As Long) As Long
Declare PtrSafe Function XPRBsetrange Lib "xprb" Alias "xbsetrange" (ByVal lct As LongPtr, ByVal low As Double, ByVal up As Double) As Long
Declare PtrSafe Function XPRBsetmodcut Lib "xprb" Alias "xbsetmodcut" (ByVal lct As LongPtr, ByVal mcstat As Long) As Long
Private Declare PtrSafe Function xbaddqterm Lib "xprb" (ByVal lct As LongPtr, ByVal v1 As LongPtr, ByVal v2 As LongPtr, ByVal coeff As Double) As Long
Private Declare PtrSafe Function xbsetqterm Lib "xprb" (ByVal lct As LongPtr, ByVal v1 As LongPtr, ByVal v2 As LongPtr, ByVal coeff As Double) As Long
Private Declare PtrSafe Function xbaddterm Lib "xprb" (ByVal lct As LongPtr, ByVal v1 As LongPtr, ByVal coeff As Double) As Long
Private Declare PtrSafe Function xbsetterm Lib "xprb" (ByVal lct As LongPtr, ByVal v1 As LongPtr, ByVal coeff As Double) As Long
Private Declare PtrSafe Function xbsetexpr_term Lib "xprb" (ByVal lct As LongPtr, ByVal v1 As LongPtr, ByVal v2 As LongPtr, ByVal coeff As Double) As Long

'*** SOS definition ***
Private Declare PtrSafe Function xbnewsos Lib "xprb" Alias "xbnewsos_prob" (ByVal prob As LongPtr, ByVal nam As String, ByVal typ As Long) As LongPtr
Declare PtrSafe Function XPRBdelsos Lib "xprb" Alias "xbdelsos" (ByVal sos As LongPtr) As Long
Declare PtrSafe Function XPRBaddsosel Lib "xprb" Alias "xbaddsosel" (ByVal sos As LongPtr, ByVal v As LongPtr, ByVal ref As Double) As Long
Declare PtrSafe Function XPRBdelsosel Lib "xprb" Alias "xbdelsosel" (ByVal sos As LongPtr, ByVal v As LongPtr) As Long

'*** Objective function ***
Private Declare PtrSafe Function xbsetsense Lib "xprb" Alias "xbsetsense_prob" (ByVal prob As LongPtr, ByVal d As Long) As Long    ' default: minimise
Private Declare PtrSafe Function xbgetsense Lib "xprb" Alias "xbgetsense_prob" (ByVal prob As LongPtr) As Long
Private Declare PtrSafe Function xbsetobj Lib "xprb" Alias "xbsetobj_prob" (ByVal prob As LongPtr, ByVal lct As LongPtr) As Long

'*** Variable bounds ***
Declare PtrSafe Function XPRBsetub Lib "xprb" Alias "xbsetub" (ByVal v As LongPtr, ByVal c As Double) As Long
Declare PtrSafe Function XPRBsetlb Lib "xprb" Alias "xbsetlb" (ByVal v As LongPtr, ByVal c As Double) As Long
Declare PtrSafe Function XPRBfixvar Lib "xprb" Alias "xbfixvar" (ByVal v As LongPtr, ByVal c As Double) As Long
Declare PtrSafe Function XPRBsetlim Lib "xprb" Alias "xbsetlim" (ByVal v As LongPtr, ByVal c As Double) As Long

'*** Names ***
Private Declare PtrSafe Function xbgetbyname Lib "xprb" Alias "xbgetbyname_prob" (ByVal prob As LongPtr, ByVal nam As String, ByVal typ As Long) As LongPtr
Private Declare PtrSafe Function xbsetdictionarysize Lib "xprb" Alias "xbsetdictsize_prob" (ByVal prob As LongPtr, ByVal dico As Long, ByVal siz As Long) As Long
Private Declare PtrSafe Function xbgetidxelname Lib "xprb" (ByVal idx As LongPtr, ByVal i As Long) As LongPtr
Private Declare PtrSafe Function xbgetprobname Lib "xprb" Alias "xbgetprobname_prob" (ByVal prob As LongPtr) As LongPtr
Private Declare PtrSafe Function xbgetvarname Lib "xprb" (ByVal v As LongPtr) As LongPtr
Private Declare PtrSafe Function xbgetctrname Lib "xprb" (ByVal lct As LongPtr) As LongPtr
Private Declare PtrSafe Function xbgetsosname Lib "xprb" (ByVal sos As LongPtr) As LongPtr
Private Declare PtrSafe Function xbgetidxsetname Lib "xprb" (ByVal idx As LongPtr) As LongPtr

'*** Directives ***
Private Declare PtrSafe Function xbsetvardir Lib "xprb" (ByVal v As LongPtr, ByVal typ As Long, ByVal cost As Double) As Long
Private Declare PtrSafe Function xbsetsosdir Lib "xprb" (ByVal ls As LongPtr, ByVal typ As Long, ByVal vl As Double) As Long
Private Declare PtrSafe Function xbcleardir Lib "xprb" Alias "xbcleardir_prob" (ByVal prob As LongPtr) As Long

'*** Index sets ***
Private Declare PtrSafe Function xbnewidxset Lib "xprb" Alias "xbnewidxset_prob" (ByVal prob As LongPtr, ByVal nam As String, ByVal maxsize As Long) As LongPtr
Private Declare PtrSafe Function xbaddidxel Lib "xprb" (ByVal idx As LongPtr, ByVal nam As String) As Long
Private Declare PtrSafe Function xbgetidxel Lib "xprb" (ByVal idx As LongPtr, ByVal nam As String) As Long
Declare PtrSafe Function XPRBgetidxsetsize Lib "xprb" Alias "xbgetidxsetsize" (ByVal idx As LongPtr) As Long
